Record what it takes to regenerate the Rocket RTL today
Top.ZynqFPGAConfig.v is not tracked, so anyone rebuilding this design has to run
rocket-chip's 2018 Chisel build. It does not come up on a current machine, and
both reasons are misleading.

firrtl/project/plugins.sbt names scalasbt.artifactoryonline.com, which has been
decommissioned -- DNS does not resolve it at all. That takes scalastyle,
org.apache.ant and org.ow2.asm down with it, which reads like the whole 2018
dependency set has rotted. It has not: those artifacts are on Maven Central, and
with that one resolver dropped, sbt 1.1.1, sbt 0.13.15, all six plugins, Scala
2.11.12, json4s and paradise all resolve.

The second reason looks like more of the same and is not a network problem at
all. Running sbt pack before building firrtl fails with an unresolved dependency
on firrtl_2.11:1.2-SNAPSHOT, because chisel3/build.sbt inspects the unmanaged
classpath and adds a managed dependency on firrtl only when firrtl.jar is
missing from it. Build firrtl first and the managed dependency never appears.

Verified: the regenerated Verilog is byte-identical to the one behind the
shipped bitstream.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>